compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__empty_case_of_list.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 1262
expression: "\nlet list = []\ncase list {}\n"
snapshot_kind: text
---
----- SOURCE CODE

let list = []
case list {}


----- ERROR
error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:3:1
  │
3 │ case list {}
  │ ^^^^^^^^^^^^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    []
    [_, ..]
